--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -54,7 +54,7 @@
     <color name="gray_bright">#33CCCCCC</color>
 
     <!-- Material design colors -->
-
+    <color name="status_bar">#FFFEFBFF</color>
     <!-- New UI color palette -->
     <!--<color name="primary">#068799</color>-->
     <!--<color name="primary_dark">#006978</color>-->
